# SmartDoor-Embedded-Linux-Project-

./: CMakeLists.txt  main.cpp
src/: FacadeResourceManager.cpp  FacadeResourceManager.hpp  IDoorStreatgy.hpp  Servo.cpp  Servo.hpp  TempSensor.cpp  TempSensor.hpp  TempertureStreatgy.cpp  TempertureStreatgy.hpp
